--- a/src/blocks/cards/__like/cards__like-count.css
+++ b/src/blocks/cards/__like/cards__like-count.css
@@ -15,6 +15,4 @@
     display: -webkit-flex;
     justify-content: center;
     -webkit-justify-content: center;
-    align-items: center;
-    -webkit-align-items: center;
 }
